[package]
name = "craking_coding_interview"
version = "0.1.0"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]
edition = "2021"

[dependencies]
crossbeam = "0.8.2"
rayon = "1.7.0"
rand = "0.8.5"
assert_approx_eq = "1.1.0"
paste = "1.0.3"
pretty_assertions = "1.3.0"
threadpool = "1.8.1"
bit-vec= "0.6.3"
num = "0.4"
strum = "0.24.1"
strum_macros = "0.24.3"

clap = "4.2.7"
error-chain = "0.12.4"
colored = "2.0.0"
log = "0.4.17"
libc = "0.2.144"

arrayvec = "0.7.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"


[[bin]]
name = "lru_cache"
path = "./hashmap/lru_cache.rs"

[[bin]]
name = "blackjack"
path = "./blackjack/main.rs"

[[bin]]
name = "chat"
path = "./chat/main.rs"

[[bin]]
name = "parkinglot"
path = "./parkinglot/main.rs"

# [[bin]]
# name = "concurrency"
# path = "./concurrency/main.rs"