[package]
name = "hyper-tuts"
version = "0.1.0"
authors = ["Sandip <sandip.dey1988@yahoo.com>"]
edition = "2021"
publish = false


[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"
futures = {version = "0.3"}
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
futures-util = "0.3"
log = "0.4.0"
env_logger = "0.10.0"
bytes = "1.4.0"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client_json"
path = "src/client_json.rs"

[[bin]]
name = "web_api"
path = "src/web_api.rs"

[[bin]]
name = "file_server"
path = "file_server/main.rs"