[package]
name = "microservice"
version = "0.1.0"
authors = ["goldsborough <peter@goldsborough.me>"]

[dependencies]
diesel = {version="2.0.3", features = ["postgres"]}
env_logger = "0.10.0"
futures = "0.3.26"
hyper = { version = "0.14.24", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
http-body = "0.4.5"
async-trait = "0.1.65"

log = "0.4.1"
maud = "0.24.0"
postgres = "0.19.4"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
syn = "2.0.11"
url = "2.3.1"
