[package]
name = "microservice"
version = "0.1.0"
edition = "2018"
authors = ["sandip <sandip.dey1988@yahoo.me>"]

[dependencies]
diesel = {version="2.0.3", features = ["postgres"]}
env_logger = "0.10.0"
pretty_env_logger = "0.4"
futures = "0.3.28"
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1.27.0", features = ["full"] }
http-body = {version = "0.4.5"}
bytes = "1.4.0"
async-trait = "0.1.65"

log = "0.4.1"
maud = "0.24.0"
postgres = "0.19.5"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.9"
syn = "2.0.13"
url = "2.3.1"
