[package]
name = "mini-tokio"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
crossbeam = "0.8"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.8"
serde_json = "1.0.104"
serde = "1.0.177"
tokio-stream = "0.1.14"
serde_derive = "1.0.177"