[package]
name = "rustypad"
version = "0.1.0"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
assert_approx_eq = "1.1.0"
paste = "1.0.3"
pretty_assertions = "1.3.0"
threadpool = "1.8.1"