[package]
name = "rustypad"
version = "0.1.0"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
assert_approx_eq = "1.1.0"
paste = "1.0.3"
pretty_assertions = "1.3.0"
threadpool = "1.8.1"
bit-vec= "0.6.3"
siphasher = "0.3.0"
slab = "0.4"
arrayvec = "0.7.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"